fixed infopane on mobile

--- a/threejs/styles/topRightButtons.css
+++ b/threejs/styles/topRightButtons.css
@@ -375,7 +375,7 @@
     border-radius: 0;
     min-width: 100%;
     max-width: 100%;
-    max-height: 68vh;
+    max-height: 58vh;
     overflow-y: auto;
     padding: 10px 0;
     box-shadow: 0 -10px 30px rgba(0,0,0,0.14);
